[tool.poetry]
name = "thornewolf-github-io"
version = "0.1.0"
description = ""
authors = ["Thorne Wolfenbarger <thornecanyon@gmail.com>"]
readme = "README.md"
packages = [{include = "thornewolf"}]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
